--- a/unit03/index.html
+++ b/unit03/index.html
@@ -59,6 +59,6 @@
             <p>&copy; Conner Chappell - DGM 2760</p>
         </footer>
 
-        <script type="module" src="js/main.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
