--- a/unit03/index.html
+++ b/unit03/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <title>03 Guessing Game</title>
@@ -30,29 +29,30 @@
 
             <h2>Instructions</h2>
             <p>In this game you try to guess a random number between 1 and 15 in as few attempts as possible. You will be awarded a ribbon for your skills. Good luck! If you would like to play again, refresh the page.</p>
-
-            <div class="d1">
-                <h2>Play</h2>
-                <div>
-                    <input id="guess" type="number" placeholder="Number">
-                    <button onclick="evalGuess()">Guess</button>
+            <section id="flex">
+                <div class="d1">
+                    <h2>Play</h2>
+                    <div>
+                        <input id="guess" type="number" placeholder="Number">
+                        <button onclick="evalGuess()">Guess</button>
+                    </div>
                 </div>
-            </div>
 
-            <div class="d2">
-                <h2>Attempts</h2>
-                <div id="attempts"></div>
-            </div>
+                <div class="d2">
+                    <h2>Attempts</h2>
+                    <div id="attempts"></div>
+                </div>
 
-            <div class="d3">
-                <h2>Feedback</h2>
-                <div id="feedback"></div>
-            </div>
+                <div class="d3">
+                    <h2>Feedback</h2>
+                    <div id="feedback"></div>
+                </div>
 
-            <div class="d4">
-                <h2>Award</h2>
-                <div id="ribbon"></div>
-            </div>
+                <div class="d4">
+                    <h2>Award</h2>
+                    <div id="ribbon"></div>
+                </div>
+            </section>
         </main>
 
         <footer>
