--- a/unit04/index.html
+++ b/unit04/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
+        <!-- Fortune Font -->
+        <link href="https://fonts.googleapis.com/css?family=Henny+Penny&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <title>04 Fortune Teller</title>
     </head>
@@ -26,7 +28,7 @@
                 <li>Concentrate a string</li>
             </ul>
 
-            <h2>Tell my Fortune</h2>
+            <h2>Your Fortune</h2>
             <p id="fortune"></p>
             
         </main>
