Added unit04 to dgm2760 home page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <a href="/unit03/index.html" target="_blank" class="project project-tile">
                 <p class="project-title">Unit 03</p>
             </a>
+            <!-- Unit 04 -->
+            <a href="/unit04/index.html" target="_blank" class="project project-tile">
+                <p class="project-title">Unit 04</p>
+            </a>
         </div>
     </section>
     <!-- End Projects Section -->
