--- a/unit05/index.html
+++ b/unit05/index.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link href="https://fonts.googleapis.com/css?family=Raleway:400,600&display=swap" rel="stylesheet">
-        <!-- Fortune Font -->
-        <link href="https://fonts.googleapis.com/css?family=Henny+Penny&display=swap" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">
         <title>05 Arborist</title>
     </head>
@@ -21,11 +19,10 @@
             <h1>Arborist</h1>
             <h2>What I learned:</h2>
             <ul class="objectives">
-                <li>Generate random numbers</li>
-                <li>Use Math functions</li>
-                <li>Pass values to and return values from a function</li>
-                <li>Use switch statements</li>
-                <li>Concentrate a string</li>
+                <li>Implement error checking on incoming values</li>
+                <li>Create and manipulate values in an array</li>
+                <li>Implement Event Handlers</li>
+                <li>Implement Event Listeners</li>
             </ul>
 
             <h2>Your Fortune</h2>
