Changed header, added html tree elements

--- a/unit05/index.html
+++ b/unit05/index.html
@@ -25,8 +25,32 @@
                 <li>Implement Event Listeners</li>
             </ul>
 
-            <h2>Your Fortune</h2>
+            <section>
+            <h2>Adding Trees</h2>
+                <button id="add_redwood">Add a Redwood tree to the End</button>
+                <button id="add_pear">Add a Pear tree to the Start</button>
+
+            <h2>Removing Trees</h2>
+                <button id="remove_tree1">Remove the first tree</button>
+                <button id="remove_tree2">Remove the second tree</button>
+                <button id="remove_treeLast">Remove the last tree</button>
             
+            <h2>Manipulating the Tree List</h2>
+                <button id="sortTrees">Sort the treez A - Z</button>
+                <button id="lowerTrees">Make all trees lower case</button>
+
+             <h2>Getting any Tree from the List</h2>
+                <button id="showName3">What is the name of tree number three</button>
+                <button id="showName4">What is the name of tree number four</button>
+            </section>
+
+            <section>
+                <h2>The Tree List</h2>
+                <div id="displayResults"></div>
+                <h2>Error Messages</h2>
+                <div id="error"></div>
+            </section>
+
         </main>
 
         <footer>
