Set up array and displayed its contents

--- a/unit05/index.html
+++ b/unit05/index.html
@@ -28,7 +28,7 @@
             <section>
             <h2>Adding Trees</h2>
                 <button id="add_redwood">Add a Redwood tree to the End</button>
-                <button id="add_pear">Add a Pear tree to the Start</button>
+                <button id="add_cherry">Add a Cherry tree to the Start</button>
 
             <h2>Removing Trees</h2>
                 <button id="remove_tree1">Remove the first tree</button>
