Started to manipulate array values

--- a/unit05/index.html
+++ b/unit05/index.html
@@ -25,7 +25,7 @@
                 <li>Implement Event Listeners</li>
             </ul>
 
-            <section>
+            <section id="manipulate_trees">
             <h2>Adding Trees</h2>
                 <button id="add_redwood">Add a Redwood tree to the End</button>
                 <button id="add_cherry">Add a Cherry tree to the Start</button>
@@ -44,10 +44,9 @@
                 <button id="showName4">What is the name of tree number four</button>
             </section>
 
-            <section>
+            <section id="tree_list">
                 <h2>The Tree List</h2>
                 <div id="displayResults"></div>
-                <h2>Error Messages</h2>
                 <div id="error"></div>
             </section>
 
