More manipulation of arrays

--- a/unit05/index.html
+++ b/unit05/index.html
@@ -36,7 +36,7 @@
                 <button id="remove_treeLast">Remove the last tree</button>
             
             <h2>Manipulating the Tree List</h2>
-                <button id="sortTrees">Sort the treez A - Z</button>
+                <button id="sortTrees">Sort the trees A - Z</button>
                 <button id="lowerTrees">Make all trees lower case</button>
 
              <h2>Getting any Tree from the List</h2>
