Added unit05 to index.html projects

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <a href="/unit04/index.html" target="_blank" class="project project-tile">
                 <p class="project-title">Unit 04</p>
             </a>
+            <!-- Unit 05 -->
+            <a href="/unit05/index.html" target="_blank" class="project project-tile">
+                <p class="project-title">Unit 05</p>
         </div>
     </section>
     <!-- End Projects Section -->
