--- a/unit06/index.html
+++ b/unit06/index.html
@@ -29,7 +29,7 @@
             </ul>
 
             <h1>Instructions:</h1>
-            <p>Please fill in the 3 areas to create your own story</p>
+            <p>Please fill in the 3 areas to create your own story. You can either hit space or return after each word.</p>
 
             <section>
                 <div>
