--- a/unit06/index.html
+++ b/unit06/index.html
@@ -29,11 +29,11 @@
             </ul>
 
             <h1>Instructions:</h1>
-            <p>Please fill in the 3 areas to create your own story. You can either hit space or return after each word.</p>
+            <p>Please fill in the 3 areas to create your own story. Either hit space or return after each word.</p>
 
             <section>
                 <div>
-                    <h2>Three Nouns</h2>
+                    <h2>Four Nouns</h2>
                     <textarea id="nouns"></textarea>
                 </div>
 
@@ -48,12 +48,11 @@
                 </div>
             </section>
 
-            <div id="results">
+            <button onclick="tellStory()">Tell the Story</button>
+
+            <div>
                 <p id="story"></p>
             </div>
-
-            <button onclick="tellStory()">Tell the Story</button>
-            <p id="story"></p>
 
         </main>
 
