Added unit06 to 2760 home page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
             <!-- Unit 05 -->
             <a href="/unit05/index.html" target="_blank" class="project project-tile">
                 <p class="project-title">Unit 05</p>
+            <!-- Unit 06 -->
+            <a href="/unit06/index.html" target="_blank" class="project project-tile">
+                <p class="project-title">Unit 06</p>
         </div>
     </section>
     <!-- End Projects Section -->
