Changed content, styling & met js requirements

--- a/unit07/index.html
+++ b/unit07/index.html
@@ -28,6 +28,35 @@
                 <li>Use querySelector and textContent to dynamically change text on the screen</li>
             </ul>
 
+            <h2>Crust Options</h2>
+                <input type="radio" id="thin" name="crust" value="thin" checked></input>
+                <label for="thin">Thin</label>
+
+                <input type="radio" id="thick" name="crust" value="thick"></input>
+                <label for="thick">Thick</label>
+
+            <h2>Topping Options</h2>
+                <input type="radio" id="sausage" name="topping" value="sausage"></input>
+                <label for="sausage">Sausage</label>
+
+                <input type="radio" id="pepperoni" name="topping" value="pepperoni" checked></input>
+                <label for="pepperoni">Pepperoni</label>
+
+            <h2>Size Options</h2>
+                <input type="radio" id="small" name="size" value="small" checked></input>
+                <label for="small">Small</label>
+
+                <input type="radio" id="large" name="size" value="large"></input>
+                <label for="large">Large</label>
+
+            <h2>Time to Eat</h2>
+                <button id="build">Build Pizza</button>
+
+            <h2>Shopping List</h2>
+                <button id="shopping">Shopping List</button>
+
+            <h2>Message back to the user:</h2>
+                <p id="feedback"></p>
         </main>
 
         <footer>
