Added unit07 to 2760 home page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
             <!-- Unit 06 -->
             <a href="/unit06/index.html" target="_blank" class="project project-tile">
                 <p class="project-title">Unit 06</p>
+            <!-- Unit 07 -->
+            <a href="/unit07/index.html" target="_blank" class="project project-tile">
+                <p class="project-title">Unit 07</p>
         </div>
     </section>
     <!-- End Projects Section -->
