Initial commit unit08 + fixed unit07 typo

--- a/unit07/index.html
+++ b/unit07/index.html
@@ -19,7 +19,7 @@
             <h1>Pizza Order Form</h1>
             <h2>What I learned:</h2>
             <ul class="objectives">
-                <li>Creted an object literal with properties and methods</li>
+                <li>Created an object literal with properties and methods</li>
                 <li>Set the properties in an object</li>
                 <li>Access the properties in an object</li>
                 <li>Access the methods of an object</li>
