--- a/unit08/index.html
+++ b/unit08/index.html
@@ -27,9 +27,14 @@
                 <li>Implement conditional checking</li>
             </ul>
 
-            <h2>Crust Options</h2>
-                
-            
+            <h2>Question of the Day:</h2>
+                <div id="stem"></div>
+                <button id="answer1"></button>
+                <button id="answer2"></button>
+                <button id="answer3"></button>
+                <button id="answer4"></button>
+                <div id="feedback"></div>
+
         </main>
 
         <footer>
