--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
             <!-- Unit 07 -->
             <a href="/unit07/index.html" target="_blank" class="project project-tile">
                 <p class="project-title">Unit 07</p>
+            <!-- Unit08 -->
+            <a href="/unit08/index.html" target="_blank" class="project project-tile">
+                <p class="project-title">Unit 08</p>
         </div>
     </section>
     <!-- End Projects Section -->
