Added unit09 to 2760 home page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             <!-- Unit08 -->
             <a href="/unit08/index.html" target="_blank" class="project project-tile">
                 <p class="project-title">Unit 08</p>
+            <!-- Unit08 -->
+            <a href="/unit09/index.html" target="_blank" class="project project-tile">
+                <p class="project-title">Unit 09</p>
         </div>
     </section>
     <!-- End Projects Section -->
