--- a/unit10/index.html
+++ b/unit10/index.html
@@ -29,14 +29,16 @@
 
             <h2>Select a Hotel</h2>
                 <ul class="hotels">
-
+                    <button id="fourSeasons">Four Seasons</button>
+                    <button id="broadmoor">The Broadmoor</button>
+                    <button id="ritz">The Ritz-Carlton</button>
                 </ul>
 
-            <h2 id="hotelName">Hotel</h2>
+            <h2 id="hotelName"></h2>
             <h3>Address: <span id="address"></span></h3>
-                <p>Number of Rooms: <span id="rooms"></span></p>
-                <p>Gym Available: <span id="gym"></span></p>
-                <p>Room Types: <span id="type"></span></p>
+            <p>Number of Rooms: <span id="rooms"></span></p>
+            <p>Gym Available: <span id="gym"></span></p>
+            <p>Room Types: <span id="type"></span></p>
 
             <img id="picture">
 
