Fixed undefined error

--- a/unit10/index.html
+++ b/unit10/index.html
@@ -29,8 +29,8 @@
 
             <h2>Select a Hotel</h2>
                 <button id="fourSeasons">Four Seasons</button>
-                <button id="broadmoor">The Broadmoor</button>
-                <button id="ritz">The Ritz-Carlton</button>
+                <button id="theBroadmoor">The Broadmoor</button>
+                <button id="ritzCarlton">The Ritz-Carlton</button>
 
             <h2 id="hotelName"></h2>
             <h3>Address: <span id="address"></span></h3>
